fixed issue with loading spinner and form submitted not showing correct spacing

--- a/src/atomic/atoms/loading/Loading.style.scss
+++ b/src/atomic/atoms/loading/Loading.style.scss
@@ -7,6 +7,7 @@
 	justify-content: center;
 	align-items: center;
 	width: 100vw;
+	padding: 15rem 0;
 }
 
 .lds-roller {
